Fixed drawer bug.
solved the problem of white space on opening drawer and added scroll for
Editable portion.

--- a/edit_style.css
+++ b/edit_style.css
@@ -1,7 +1,7 @@
 
     *[contenteditable] {
       margin: 1em auto;
-	  min-height:2000px;
+	  min-height:100%;
 	   bottom:1px;
       padding: 10px;
       background: #fff;
